--- a/DailyRadio/index.html
+++ b/DailyRadio/index.html
@@ -9,10 +9,10 @@
 
   <!-- css -->
   <link rel=" stylesheet" href="dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="dist/css/style.css" />
   <link rel="stylesheet" href="dist/css/owl.carousel.min.css">
   <link rel="stylesheet" href="dist/css/owl.theme.default.min.css">
   <link rel="stylesheet" href="dist/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="dist/css/style.css" />
 </head>
 
 <body>
@@ -78,6 +78,10 @@
           <h3 class="information__title" id="track-name"></h3>
         </div>
         <div class="col-12">
+          <div class="information__numeric container d-flex justify-content-between flex-row">
+            <div class="information__numeric_currentTime"></div>
+            <div class="information__numeric_songLength"></div>
+          </div>
           <input disabled class="information__currentTime" id="current-time" type="range" name="points" step="1" min="0"
             value="0">
         </div>
