--- a/DailyRadio/index.html
+++ b/DailyRadio/index.html
@@ -1,23 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>daily-music</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
-  <link rel="stylesheet" href="./src/variables.scss">
-</head>
-
-<body>
-  <noscript>
-    <strong>We're sorry but daily-music doesn't work properly without JavaScript enabled. Please enable it to
-      continue.</strong>
-  </noscript>
-  <div id="app"></div>
-  <!-- built files will be auto injected -->
-</body>
-
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><title>daily-music</title><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css><link rel=stylesheet href=../src/variables.scss><link href=/css/app.2a770069.css rel=preload as=style><link href=/css/chunk-vendors.2346642d.css rel=preload as=style><link href=/js/app.d5737736.js rel=preload as=script><link href=/js/chunk-vendors.7403ddce.js rel=preload as=script><link href=/css/chunk-vendors.2346642d.css rel=stylesheet><link href=/css/app.2a770069.css rel=stylesheet></head><body><noscript><strong>We're sorry but daily-music doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.7403ddce.js></script><script src=/js/app.d5737736.js></script></body></html>
