--- a/DailyRadio/index.html
+++ b/DailyRadio/index.html
@@ -1,1 +1,23 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><title>daily-music</title><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css><script src=https://music.yandex.ru/api/audio/dist/index.js></script><link href=/css/app.53c1c02b.css rel=preload as=style><link href=/css/chunk-vendors.2346642d.css rel=preload as=style><link href=/js/app.5ef61f32.js rel=preload as=script><link href=/js/chunk-vendors.38ef7a5f.js rel=preload as=script><link href=/css/chunk-vendors.2346642d.css rel=stylesheet><link href=/css/app.53c1c02b.css rel=stylesheet></head><body><noscript><strong>We're sorry but daily-music doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.38ef7a5f.js></script><script src=/js/app.5ef61f32.js></script></body></html>
+<!DOCTYPE html>
+<html lang=en>
+
+<head>
+    <meta charset=utf-8>
+    <meta http-equiv=X-UA-Compatible content="IE=edge">
+    <meta name=viewport content="width=device-width,initial-scale=1">
+    <title>daily-music</title>
+    <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css> <script
+        src=https://music.yandex.ru/api/audio/dist/index.js> </script> <link href=/css/app.53c1c02b.css rel=preload
+        as=style>
+    <link href=https://taratatuy.github.io/DailyRadio/css/chunk-vendors.2346642d.css rel=preload as=style>
+    <link href=https://taratatuy.github.io/DailyRadio/js/app.5ef61f32.js rel=preload as=script>
+    <link href=https://taratatuy.github.io/DailyRadio/js/chunk-vendors.38ef7a5f.js rel=preload as=script>
+    <link href=https://taratatuy.github.io/DailyRadio/css/chunk-vendors.2346642d.css rel=stylesheet>
+    <link href=https://taratatuy.github.io/DailyRadio/css/app.53c1c02b.css rel=stylesheet>
+</head>
+
+<body><noscript><strong>We're sorry but daily-music doesn't work properly without JavaScript enabled. Please enable it
+            to continue.</strong></noscript>
+    <div id=app></div>
+    <script src=/js/chunk-vendors.38ef7a5f.js> </script> <script src=/js/app.5ef61f32.js> </script> </body> </html>
