--- a/DailyRadio/index.html
+++ b/DailyRadio/index.html
@@ -10,11 +10,11 @@
     <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css> <script
         src=https://music.yandex.ru/api/audio/dist/index.js> </script> <link href=/css/app.53c1c02b.css rel=preload
         as=style>
-    <link href=https://taratatuy.github.io/DailyRadio/css/chunk-vendors.2346642d.css rel=preload as=style>
-    <link href=https://taratatuy.github.io/DailyRadio/js/app.5ef61f32.js rel=preload as=script>
-    <link href=https://taratatuy.github.io/DailyRadio/js/chunk-vendors.38ef7a5f.js rel=preload as=script>
-    <link href=https://taratatuy.github.io/DailyRadio/css/chunk-vendors.2346642d.css rel=stylesheet>
-    <link href=https://taratatuy.github.io/DailyRadio/css/app.53c1c02b.css rel=stylesheet>
+    <link href="https://taratatuy.github.io/DailyRadio/css/chunk-vendors.2346642d.css" rel=preload as=style>
+    <link href="https://taratatuy.github.io/DailyRadio/js/app.5ef61f32.js" rel=preload as=script>
+    <link href="https://taratatuy.github.io/DailyRadio/js/chunk-vendors.38ef7a5f.js" rel=preload as=script>
+    <link href="https://taratatuy.github.io/DailyRadio/css/chunk-vendors.2346642d.css" rel=stylesheet>
+    <link href="https://taratatuy.github.io/DailyRadio/css/app.53c1c02b.css" rel=stylesheet>
 </head>
 
 <body><noscript><strong>We're sorry but daily-music doesn't work properly without JavaScript enabled. Please enable it
