--- a/404.html
+++ b/404.html
@@ -13,6 +13,7 @@
     <main>
         <div id="firstScene">
             <div id="button" onclick="showAnything()"></div>
+            <h1>404</h1>
             <h1>There is nothing here :)</h1>
         </div>
         <div id="secondScene">
@@ -36,6 +37,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
         height: 70vh;
         font-size: 35px;
     }
@@ -43,6 +45,7 @@
     #firstScene>h1 {
         padding: 0 15px;
         text-align: center;
+        margin-bottom: 5px;
     }
 
     #button {
