--- a/404.html
+++ b/404.html
@@ -22,6 +22,7 @@
                 <p>"There is nothing here..."</p>
                 <p id="ps">...just quick navigation. :)</p>
                 <ul>
+                    <li><a href="https://taratatuy.github.io/CanvasCircles/">Canvas Circles</a></li>
                     <li><a href="https://taratatuy.github.io/DailyRadio/">DailyRadio</a></li>
                     <li><a href="https://taratatuy.github.io/TheWheelOfTime/heroes">TheWheelOfTime heroes</a></li>
                     <li><a href="https://taratatuy.github.io/sheets-trening/">sheets-trening</a></li>
