--- a/TheWheelOfTime/lines/index.html
+++ b/TheWheelOfTime/lines/index.html
@@ -10,61 +10,65 @@
 
 <body>
     <main>
+        <h1>
+            Heroes lines:
+        </h1>
+        <hr>
         <div class="book0">
             <h1>Book 0 New Spring</h1>
-            <img src="img/Story Lines/Book0 New Spring.png" alt="">
+            <img src="img/Book0 New Spring.png" alt="">
         </div>
         <div class="book1">
             <h1>Book 1 The Eye of the World</h1>
-            <img src="img/Story Lines/Book1.png" alt="">
+            <img src="img/Book1.png" alt="">
         </div>
         <div class="book2">
             <h1>Book 2 The Great Hunt</h1>
-            <img src="img/Story Lines/Book2.png" alt="">
+            <img src="img/Book2.png" alt="">
         </div>
         <div class="book3">
             <h1>Book 3 The Dragon Reborn</h1>
-            <img src="img/Story Lines/Book3.png" alt="">
+            <img src="img/Book3.png" alt="">
         </div>
         <div class="boo4">
             <h1>Book 4 The Shadow Rising</h1>
-            <img src="img/Story Lines/Book4.png" alt="">
+            <img src="img/Book4.png" alt="">
         </div>
         <div class="book5">
             <h1>Book 5 The Fires of Heaven</h1>
-            <img src="img/Story Lines/Book5.png" alt="">
+            <img src="img/Book5.png" alt="">
         </div>
         <div class="book6">
             <h1>Book 6 Lord of Chaos</h1>
-            <img src="img/Story Lines/Book6.png" alt="">
+            <img src="img/Book6.png" alt="">
         </div>
         <div class="book7">
             <h1>Book 7 A Crown of Swords</h1>
-            <img src="img/Story Lines/Book7.png" alt="">
+            <img src="img/Book7.png" alt="">
         </div>
         <div class="book8">
             <h1>Book 8 The Path of Daggers</h1>
-            <img src="img/Story Lines/Book8.png" alt="">
+            <img src="img/Book8.png" alt="">
         </div>
         <div class="book9">
             <h1>Book 9 Winter's Heart</h1>
-            <img src="img/Story Lines/Book9.png" alt="">
+            <img src="img/Book9.png" alt="">
         </div>
         <div class="book10">
             <h1>Book 10 Crossroads of Twilight</h1>
-            <img src="img/Story Lines/Book10.png" alt="">
+            <img src="img/Book10.png" alt="">
         </div>
         <div class="book11">
             <h1>Book 11 Knife of Dreams</h1>
-            <img src="img/Story Lines/Book11.png" alt="">
+            <img src="img/Book11.png" alt="">
         </div>
         <div class="book12">
             <h1>Book 12 The Gathering Storm</h1>
-            <img src="img/Story Lines/Book12.png" alt="">
+            <img src="img/Book12.png" alt="">
         </div>
         <div class="book13">
             <h1>Book 13 Towers of Midnight</h1>
-            <img src="img/Story Lines/Book13.png" alt="">
+            <img src="img/Book13.png" alt="">
         </div>
         <br>
         <br>
