Insertion sort minor update

--- a/InsertionSort/index.html
+++ b/InsertionSort/index.html
@@ -11,11 +11,15 @@
 
 <body>
     <div id="wrapper">
+        <header>
+            <h2>Insertion Sort</h2>
+        </header>
         <main>
             <div id="array"></div>
         </main>
         <footer>
             <button onclick="startSort()" id="startButton">Start sort</button>
+            <button onclick="getNewUnsortedArray()" id="newArrayButton">Get new Array</button>
         </footer>
     </div>
 
