--- a/InsertionSort/index.html
+++ b/InsertionSort/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shell Sort</title>
+    <title>Insertion Sort</title>
     <script src="InsertionSort.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
