--- a/faceIDApp/index.html
+++ b/faceIDApp/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Face ID</title>
-
+    <script defer src="face-api.min.js"></script>
     <script defer src="script.js"></script>
     <style>
         body {
@@ -16,6 +16,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
+        }
+
+        canvas {
+            position: absolute;
         }
     </style>
 </head>
