--- a/404.html
+++ b/404.html
@@ -1,168 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Taratatuy's Page</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header></header>
     <main>
-        <div id="firstScene">
-            <div id="button" onclick="showAnything()"></div>
-            <h1>404</h1>
-            <h1>There is nothing here :)</h1>
+      <div id="firstScene">
+        <div id="button" onclick="showAnything()"></div>
+        <h1>404</h1>
+        <h1>There is nothing here :)</h1>
+      </div>
+      <div id="secondScene">
+        <h2>Hi there!</h2>
+        <div id="text">
+          <p>"There is nothing here..."</p>
+          <p id="ps">...just quick navigation. :)</p>
+          <ul>
+            <li>
+              <a href="https://taratatuy.github.io/CanvasCircles/"
+                >Canvas Circles</a
+              >
+            </li>
+            <li>
+              <a href="https://taratatuy.github.io/faceIDApp/">Face id</a>
+            </li>
+            <li>
+              <a href="https://taratatuy.github.io/DailyRadio/">DailyRadio</a>
+            </li>
+            <li>
+              <a href="https://taratatuy.github.io/TheWheelOfTime/heroes"
+                >TheWheelOfTime heroes</a
+              >
+            </li>
+            <li>
+              <a href="https://taratatuy.github.io/sheets-trening/"
+                >sheets-trening</a
+              >
+            </li>
+          </ul>
         </div>
-        <div id="secondScene">
-            <h2>Hi there!</h2>
-            <div id="text">
-                <p>"There is nothing here..."</p>
-                <p id="ps">...just quick navigation. :)</p>
-                <ul>
-                    <li><a href="https://taratatuy.github.io/CanvasCircles/">Canvas Circles</a></li>
-                    <li><a href="https://taratatuy.github.io/DailyRadio/">DailyRadio</a></li>
-                    <li><a href="https://taratatuy.github.io/TheWheelOfTime/heroes">TheWheelOfTime heroes</a></li>
-                    <li><a href="https://taratatuy.github.io/sheets-trening/">sheets-trening</a></li>
-                </ul>
-            </div>
-        </div>
+      </div>
     </main>
     <footer></footer>
-</body>
+  </body>
 
-<style>
+  <style>
     #firstScene {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        height: 70vh;
-        font-size: 35px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      height: 70vh;
+      font-size: 35px;
     }
 
-    #firstScene>h1 {
-        padding: 0 15px;
-        text-align: center;
-        margin-bottom: 5px;
+    #firstScene > h1 {
+      padding: 0 15px;
+      text-align: center;
+      margin-bottom: 5px;
     }
 
     #button {
-        height: 100px;
-        width: 100px;
-        position: absolute;
-        left: 0;
-        top: 0;
+      height: 100px;
+      width: 100px;
+      position: absolute;
+      left: 0;
+      top: 0;
     }
 
     #secondScene {
-        display: none;
+      display: none;
     }
 
     body {
-        background-color: white;
-        font-family: Arial, Helvetica, sans-serif;
+      background-color: white;
+      font-family: Arial, Helvetica, sans-serif;
     }
 
     #text {
-        width: 95%;
-        max-width: 400px;
-        padding-bottom: 100px;
-        margin: auto;
+      width: 95%;
+      max-width: 400px;
+      padding-bottom: 100px;
+      margin: auto;
     }
 
     h2 {
-        margin: 0;
-        margin-top: 70px;
-        text-align: center;
-        font-size: 50px;
+      margin: 0;
+      margin-top: 70px;
+      text-align: center;
+      font-size: 50px;
     }
 
     p {
-        margin: 0;
-        margin-top: 5px;
-        text-align: center;
-        font-size: 25px;
+      margin: 0;
+      margin-top: 5px;
+      text-align: center;
+      font-size: 25px;
     }
 
     #ps {
-        font-size: 18px;
-        text-align: end;
+      font-size: 18px;
+      text-align: end;
     }
 
     ul {
-        padding: 0 15px;
+      padding: 0 15px;
     }
 
     li {
-        list-style: none;
-        line-height: 2;
-        display: flex;
-
+      list-style: none;
+      line-height: 2;
+      display: flex;
     }
 
     a {
-        display: block;
-        flex-grow: 1;
-        color: darkblue;
-        text-decoration: none;
-        font-weight: bold;
-        padding: 0 20px;
-        border-top: 1px solid white;
-        border-bottom: 1px solid #F1F1F1;
+      display: block;
+      flex-grow: 1;
+      color: darkblue;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 0 20px;
+      border-top: 1px solid white;
+      border-bottom: 1px solid #f1f1f1;
     }
 
-    @media (min-width: 576px) {}
+    @media (min-width: 576px) {
+    }
 
     @media (min-width: 768px) {
-        #text {
-            max-width: 660px;
-            border-left: 1px solid #DDDDDD;
-            border-right: 1px solid #DDDDDD;
-        }
+      #text {
+        max-width: 660px;
+        border-left: 1px solid #dddddd;
+        border-right: 1px solid #dddddd;
+      }
 
-        h2 {
-            font-size: 70px;
-        }
+      h2 {
+        font-size: 70px;
+      }
 
-        p {
-            margin: 0 80px;
-            font-size: 35px;
-        }
+      p {
+        margin: 0 80px;
+        font-size: 35px;
+      }
 
-        #ps {
-            font-size: 24px;
-        }
+      #ps {
+        font-size: 24px;
+      }
 
-        li {
-            font-size: 28px;
-        }
+      li {
+        font-size: 28px;
+      }
 
-        a {
-            padding: 0 80px;
-        }
+      a {
+        padding: 0 80px;
+      }
     }
 
     @media (min-width: 1200px) {
-        a:hover {
-            background-color: #F1F1F1;
-            border-top: 1px solid #DCDCDC;
-            border-bottom: 1px solid #DCDCDC;
-        }
+      a:hover {
+        background-color: #f1f1f1;
+        border-top: 1px solid #dcdcdc;
+        border-bottom: 1px solid #dcdcdc;
+      }
     }
-</style>
+  </style>
 
-<script>
+  <script>
     function showAnything() {
-        const firstScene = document.getElementById('firstScene');
-        const secondScene = document.getElementById('secondScene');
+      const firstScene = document.getElementById('firstScene');
+      const secondScene = document.getElementById('secondScene');
 
-        firstScene.style.display = 'none';
-        secondScene.style.display = 'block';
+      firstScene.style.display = 'none';
+      secondScene.style.display = 'block';
     }
-</script>
-
-
+  </script>
 </html>
