--- a/TheWheelOfTime/heroes/index.html
+++ b/TheWheelOfTime/heroes/index.html
@@ -10,8 +10,9 @@
   <link rel="shortcut icon" type="image/x-icon" href="img/icon3.png" />
   <title>The Wheel of Time Characters, Chronological</title>
 
+
   <iframe src="https://taratatuy.github.io/YaMetrika_global.html" frameborder="0" height="0" width="0"></iframe>
- 
+
 </head>
 
 
@@ -82,7 +83,7 @@
       <span class="bookName">A Memory of Light</span>
     </a>
   </aside>
-  <div id="wrapper">
+  <div id="wrapper" onclick="hideSidebar()">
     <header>
       <h3>
         Chronological listing of characters encountered in
