Add YaMetrika global counter

--- a/CanvasCircles/index.html
+++ b/CanvasCircles/index.html
@@ -3,7 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Canvas circles</title>
+
+
+  <iframe src="https://taratatuy.github.io/YaMetrika_global.html" frameborder="0" height="0" width="0"
+    style="display: none;"></iframe>
+
+
   <link rel="stylesheet" href="style.css">
   <script src="Canvas1.js" defer></script>
   <script src="Canvas2.js" defer></script>
