--- a/DailyRadio/index.html
+++ b/DailyRadio/index.html
@@ -6,10 +6,16 @@
     <meta http-equiv=X-UA-Compatible content="IE=edge">
     <meta name=viewport content="width=device-width,initial-scale=1">
     <title>daily-music</title>
+
+
+    <iframe src="https://taratatuy.github.io/YaMetrika_global.html" frameborder="0" height="0" width="0"
+        style="display: none;"></iframe>
+
+
     <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css> <script
-        src=https://music.yandex.ru/api/audio/dist/index.js> </script> <link
-        href="https://taratatuy.github.io/DailyRadio/css/app.53c1c02b.css" rel=preload as=style>
+    <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css>
+    <script src=https://music.yandex.ru/api/audio/dist/index.js> </script>
+    <link href="https://taratatuy.github.io/DailyRadio/css/app.53c1c02b.css" rel=preload as=style>
     <link href="https://taratatuy.github.io/DailyRadio/css/chunk-vendors.2346642d.css" rel=preload as=style>
     <link href="https://taratatuy.github.io/DailyRadio/js/app.5ef61f32.js" rel=preload as=script>
     <link href="https://taratatuy.github.io/DailyRadio/js/chunk-vendors.38ef7a5f.js" rel=preload as=script>
