--- a/sheets-trening/index.html
+++ b/sheets-trening/index.html
@@ -8,6 +8,10 @@
     <title>Sheets Trening</title>
 
 
+    <iframe src="https://taratatuy.github.io/YaMetrika_global.html" frameborder="0" height="0" width="0"
+        style="display: none;"></iframe>
+
+
     <style>
         .content {
             display: flex;
