--- a/InsertionSort/index.html
+++ b/InsertionSort/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Insertion Sort</title>
+
+
+    <iframe src="https://taratatuy.github.io/YaMetrika_global.html" frameborder="0" height="0" width="0"
+        style="display: none;"></iframe>
+
+
     <script src="InsertionSort.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
