--- a/faceIDApp/index.html
+++ b/faceIDApp/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Face ID</title>
+
+
+    <iframe src="https://taratatuy.github.io/YaMetrika_global.html" frameborder="0" height="0" width="0"
+        style="display: none;"></iframe>
+
+
     <script defer src="face-api.min.js"></script>
     <script defer src="script.js"></script>
     <style>
