[WoT] fix unactive 'a' class

--- a/TheWheelOfTime/heroes/index.html
+++ b/TheWheelOfTime/heroes/index.html
@@ -22,63 +22,63 @@
 
     <div class="line"></div>
 
-    <a href="#navBook0" class="link-num" onclick="hideSidebar()">
+    <a href="#navBook0" class="link-num unactive" onclick="hideSidebar()">
       <span class=" bookNum">0.</span>
       <span class="bookName">New Spring</span>
     </a>
-    <a href="#navBook1" class="link-num" onclick="hideSidebar()">
+    <a href="#navBook1" class="link-num unactive" onclick="hideSidebar()">
       <span class="bookNum">1.</span>
       <span class="bookName">The Eye of the World</span>
     </a>
-    <a href="#navBook2" class="link-num" onclick="hideSidebar()">
+    <a href="#navBook2" class="link-num unactive" onclick="hideSidebar()">
       <span class="bookNum">2.</span>
       <span class="bookName">The Great Hunt</span>
     </a>
-    <a href="#navBook3" class="link-num" onclick="hideSidebar()">
+    <a href="#navBook3" class="link-num unactive" onclick="hideSidebar()">
       <span class="bookNum">3.</span>
       <span class="bookName">The Dragon Reborn</span>
     </a>
-    <a href="#navBook4" class="link-num" onclick="hideSidebar()">
+    <a href="#navBook4" class="link-num unactive" onclick="hideSidebar()">
       <span class="bookNum">4.</span>
       <span class="bookName">The Shadow Rising</span>
     </a>
-    <a href="#navBook5" class="link-num" onclick="hideSidebar()">
+    <a href="#navBook5" class="link-num unactive" onclick="hideSidebar()">
       <span class="bookNum">5.</span>
       <span class="bookName">The Fires of Heaven</span>
     </a>
-    <a href="#navBook6" class="link-num" onclick="hideSidebar()">
+    <a href="#navBook6" class="link-num unactive" onclick="hideSidebar()">
       <span class="bookNum">6.</span>
       <span class="bookName">Lord of Chaos</span>
     </a>
-    <a href="#navBook7" class="link-num" onclick="hideSidebar()">
+    <a href="#navBook7" class="link-num unactive" onclick="hideSidebar()">
       <span class="bookNum">7.</span>
       <span class="bookName">A Crown of Swords</span>
     </a>
-    <a href="#navBook8" class="link-num" onclick="hideSidebar()">
+    <a href="#navBook8" class="link-num unactive" onclick="hideSidebar()">
       <span class="bookNum">8.</span>
       <span class="bookName">The Path of Daggers</span>
     </a>
-    <a href="#navBook9" class="link-num" onclick="hideSidebar()">
+    <a href="#navBook9" class="link-num unactive" onclick="hideSidebar()">
       <span class="bookNum">9.</span>
       <span class="bookName">Winter's Heart</span>
     </a>
-    <a href="#navBook10" class="link-num" onclick="hideSidebar()">
+    <a href="#navBook10" class="link-num unactive" onclick="hideSidebar()">
       <span class="bookNum">10.</span>
       <span class="bookName">Crossroads of Twilight</span>
     </a>
-    <a href="#navBook11" class="link-num" onclick="hideSidebar()">
+    <a href="#navBook11" class="link-num unactive" onclick="hideSidebar()">
       <span class="bookNum">11.</span>
       <span class="bookName">Knife of Dreams</span>
     </a>
-    <a href="#navBook12" class="link-num" onclick="hideSidebar()">
+    <a href="#navBook12" class="link-num unactive" onclick="hideSidebar()">
       <span class="bookNum">12.</span>
       <span class="bookName">The Gathering Storm</span>
     </a>
-    <a href="#navBook13" class="link-num" onclick="hideSidebar()">
+    <a href="#navBook13" class="link-num unactive" onclick="hideSidebar()">
       <span class="bookNum">13.</span>
       <span class="bookName">Towers of Midnight</span>
     </a>
-    <a href="#navBook14" class="link-num" onclick="hideSidebar()">
+    <a href="#navBook14" class="link-num unactive" onclick="hideSidebar()">
       <span class="bookNum">14.</span>
       <span class="bookName">A Memory of Light</span>
     </a>
