[WoT] Add missing name

--- a/TheWheelOfTime/heroes/index.html
+++ b/TheWheelOfTime/heroes/index.html
@@ -17082,7 +17082,7 @@
             </li>
             <h3>Glossary</h3>
 
-            <li><a class="name" name="Pelateos"></a>, tGS,
+            <li><a class="name" name="Pelateos">Pelateos</a>, tGS,
               p. 778—Author of <i>Pelateos's Ponderings</i>.
             </li>
           </section>
