Add beta Splyne Interpolation

--- a/404.html
+++ b/404.html
@@ -42,6 +42,9 @@
           <li>
             <a href="https://taratatuy.github.io/sheets-trening/">sheets-trening</a>
           </li>
+          <li>
+            <a href="https://taratatuy.github.io/SlineInterpolation/">sheets-trening</a>
+          </li>
         </ul>
       </div>
     </div>
