--- a/SplineInterpolation/index.html
+++ b/SplineInterpolation/index.html
@@ -80,7 +80,7 @@
             <span>
                 Made by WB.
             </span>
-            <a href="https://github.com/taratatuy">GitHub.</a>
+            <a href="https://github.com/taratatuy" tabindex="-1">GitHub.</a>
         </footer>
     </div>
 
