--- a/SplineInterpolation/index.html
+++ b/SplineInterpolation/index.html
@@ -30,7 +30,7 @@
                 <div class="inputs col-sm-12 col-lg-4 ">
                     <div class="formula-input col-12">
                         <div class="form-group">
-                            <label for="functionInput">Input formula:</label>
+                            <label for="functionInput">Formula:</label>
                             <input type="text" value="2*x**5 - 10*x**3 + 13*x**2 - 7*x + 11" class="form-control"
                                 id="functionInput" placeholder="2*x^5 - 10*x^3 + 13*x^2 - 7*x + 11"
                                 data-input-type="functionInput" />
@@ -41,9 +41,9 @@
                     </div>
                     <div class="row col-12 px-0 mx-0 justify-content-center">
                         <div class="row col-12 px-0 mx-0 justify-content-center">
-                            <label class="col-4" for="startPointInput">Input start point:</label>
-                            <label class="col-4" for="endPointInput">Input end point:</label>
-                            <label class="col-4" for="stepInput">Input step:</label>
+                            <label class="col-4" for="startPointInput">Start point:</label>
+                            <label class="col-4" for="endPointInput">End point:</label>
+                            <label class="col-4" for="stepInput">Step:</label>
                         </div>
                         <div class="row col-12 px-0 mx-0 justify-content-center">
                             <div class="inputA col-4">
