Add Ya.Metrica and link to insertion sort for 404

--- a/404.html
+++ b/404.html
@@ -40,10 +40,13 @@
             <a href="https://taratatuy.github.io/TheWheelOfTime/heroes">TheWheelOfTime heroes</a>
           </li>
           <li>
-            <a href="https://taratatuy.github.io/sheets-trening/">sheets-trening</a>
+            <a href="https://taratatuy.github.io/InsertionSort/">Insertion Sort</a>
           </li>
           <li>
             <a href="https://taratatuy.github.io/SplineInterpolation/">Spline Interpolation</a>
+          </li>
+          <li>
+            <a href="https://taratatuy.github.io/sheets-trening/">sheets-trening</a>
           </li>
         </ul>
       </div>
