--- a/SplineInterpolation/index.html
+++ b/SplineInterpolation/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spline Interpolation</title>
+
+
+    <iframe src="https://taratatuy.github.io/YaMetrika_global.html" frameborder="0" height="0" width="0"
+        style="display: none;"></iframe>
+
+
     <script src="libs/math.min.js"></script>
     <script src="libs/Chart.min.js"></script>
     <script src="libs/pearson-correlation.js"></script>
